--- a/src/index.css
+++ b/src/index.css
@@ -82,6 +82,37 @@
   padding-left: 1.5rem;
 }
 
+/* Enhanced paragraph spacing for lesson content */
+.prose p {
+  margin-top: 1.25rem;
+  margin-bottom: 1.25rem;
+  line-height: 1.7;
+  color: #374151;
+}
+
+.prose p:first-child {
+  margin-top: 0;
+}
+
+.prose p:last-child {
+  margin-bottom: 0;
+}
+
+/* Additional spacing for lesson content specifically */
+.lesson-content .prose p {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+  line-height: 1.8;
+}
+
+.lesson-content .prose p:first-child {
+  margin-top: 0;
+}
+
+.lesson-content .prose p:last-child {
+  margin-bottom: 0;
+}
+
 /* Flashcard Styles */
 .perspective {
   perspective: 1000px;
